fix: horizontal scroll fix

--- a/src/components/garage/garageNavbar.css
+++ b/src/components/garage/garageNavbar.css
@@ -52,3 +52,9 @@
     justify-content: flex-start;
   }
 }
+
+@media (min-width: 700px) and (max-width: 980px) {
+  .nav-group {
+    flex-wrap: wrap;
+  }
+}
